--- a/airflow/airflow/airflow.cfg
+++ b/airflow/airflow/airflow.cfg
@@ -301,11 +301,11 @@ expose_stacktrace = True
 
 # Set to true to turn on authentication:
 # https://airflow.apache.org/security.html#web-authentication
-authenticate = True
-auth_backend =airflow.contrib.auth.backends.password_auth
+authenticate = False
+# auth_backend = airflow.contrib.auth.backends.password_auth
 
 # Filter the list of dags by owner name (requires authentication to be enabled)
-filter_by_owner = False
+filter_by_owner = True
 
 # Filtering mode. Choices include user (default) and ldapgroup.
 # Ldap group filtering requires using the ldap backend
@@ -347,7 +347,7 @@ hide_paused_dags_by_default = False
 page_size = 100
 
 # Use FAB-based webserver with RBAC feature
-rbac = True
+rbac = False
 
 # Define the color of navigation bar
 navbar_color = #007A87
@@ -599,6 +599,12 @@ catchup_by_default = True
 # Additionally, you may hit the maximum allowable query length for your db.
 # Set this to 0 for no limit (not advised)
 max_tis_per_query = 512
+
+# Statsd (https://github.com/etsy/statsd) integration settings
+statsd_on = False
+statsd_host = localhost
+statsd_port = 8125
+statsd_prefix = airflow
 
 # If you want to avoid send all the available metrics to StatsD,
 # you can configure an allow list of prefixes to send only the metrics that
@@ -983,10 +989,3 @@ fs_group =
 # The worker pods will be given these static labels, as well as some additional dynamic labels
 # to identify the task.
 # Should be supplied in the format: ``key = value``
-
-# Statsd (https://github.com/etsy/statsd) integration settings
-[metrics]
-statsd_on = True
-statsd_host = statsd-exporter
-statsd_port = 9125
-statsd_prefix = airflow
