--- a/airflow/Dockerfile
+++ b/airflow/Dockerfile
@@ -1,5 +1,4 @@
-FROM puckel/docker-airflow:latest
-USER root
+FROM puckel/docker-airflow:1.10.9
 
 COPY airflow/airflow.cfg ${AIRFLOW_HOME}/airflow.cfg
 
